--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,15 +1,27 @@
----
-title: Le Wagon - Middleman
----
-
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path 'homepage_banner.jpeg'%>);">
+  <div class="banner-content">
+    <h1>Mooja</h1>
+    <p>Book your next surf trip. Easily.</p>
+    <a class="btn btn-primary btn-lg">Surf now</a>
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+  <% data.surfcamps.each do |surfcamp| %>
+    <div class="col-xs-12 col-sm-4">
+      <!-- insert <div class="card"> -->
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path "#{surfcamp.image_path}"%>);">
+        <div class="card-category"><%= surfcamp.category %></div>
+        <div class="card-description">
+          <h2><%= surfcamp.name %></h2>
+          <p><%= surfcamp.description %></p>
+        </div>
+        <%= image_tag "#{surfcamp.user_image_path}", class: "card-user" %>
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+  <% end %>
+  </div>
+</div>
+
