Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -32,7 +32,8 @@
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="#">Host</a></li>
         <li><a href="#">Trips</a></li>
-        <li><a href="#">Messagese</a></li>
+        <li><a href="#">Messages</a></li>
+        <li><%= link_to "Team", "about.html", class: "navbar-wagon-item navbar-wagon-link" %></li>
       </ul>
     </div>
   </div>
