--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="container">
   <div class="row">
-  <% data.surfcamps.each do |surfcamp| %>
+  <% data.surfcamps.each do |key, surfcamp| %>
     <div class="col-xs-12 col-sm-4">
       <!-- insert <div class="card"> -->
       <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path "#{surfcamp.image_path}"%>);">
@@ -18,7 +18,7 @@
           <p><%= surfcamp.description %></p>
         </div>
         <%= image_tag "#{surfcamp.user_image_path}", class: "card-user" %>
-        <a class="card-link" href="#" ></a>
+        <%= link_to "", "/surfcamps/#{key}.html", class: "card-link" %>
       </div>
     </div>
   <% end %>
